# TP-OptiLabel

./: .gitignore  OptLabel.py  OptiLabel.py  README.md  findArea.py  image_widget.py  image_widget_Tomas.py  manual_labeling.py
auto_labeling/: README.md  pyproject.toml
auto_labeling/auto_labeling/guided/: abstract.py  pst_labeling.py
auto_labeling/examples/: pst_labeling.py  test.py
auto_labeling/notebooks/: PST_EST_model_scripted_v1.pt  neural.ipynb  neural_maskpredict.ipynb  prepare_data.ipynb  prepare_pstimages.ipynb
gui/: form.ui  mainwindow.py  ui_form.py
notebooks/: PST_EST_model_metadata_v1.pkl  prepare_data.ipynb
semi_auto_labeling_lib/: README.md
semi_auto_labeling_lib/auto_labeling/guided/: __init__.py
semi_auto_labeling_lib/auto_labeling/nn/: __init__.py  ultils.py
semi_auto_labeling_lib/examples/: pst_labeling.py
