[tool.poetry]
name = "auto-labeling"
version = "0.1.0"
description = ""
authors = ["Danil Zlobin <xzlobin@stuba.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
phycv = "^1.2.6"
torch = "^2.2.2"
pandas = "^2.2.1"
pygad = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
